public/css/main.css
html {
  font-size: 16px;
  line-height: 1.8rem;
}


body {
  --body-background-color: #161616;
  --container-background-color: transparent;
  --body-color: #cfcac5;
  --highlight-color: #F6BD95;
  --link-color: #6aa;
  --heading-color: #532;
  --container-size: 100%;
  
  font-family: 'Work Sans', sans-serif;
  width: 100vw;
  height: 100vh;
  padding: 0 0;
  margin: 0 0;
  display: grid;
  grid-template-columns: [left-gutter] auto [content] var(--container-size) [right-gutter] auto;
  grid-template-rows: [top-gutter] auto [content] var(--container-size) [bottom-gutter] auto;
  color: var(--body-color);
  background: var(--body-background-color);
  transition: 0.1s linear background;
}


.container {
  grid-column-start: content;
  grid-row-start: content;
  padding: 1rem 2rem;
  
  z-index: 0;
  background: var(--container-background-color);
  transition: 0.1s linear background;
}



.inverse {
  transition: 0.1s linear background;
  background: var(--container-background-color);
}


a,
a:link {
  color: var(--link-color);
  text-decoration: none;
}

content a:hover {
  text-decoration: underline;
}

::selection {
  color: var(--highlight-color);
  background: transparent;
}

#bg-layer {
 display: block;
 position: absolute;
 left: 0px;
 right: 0px;
 bottom: 0px;
 top: 0px;
 z-index: 0;
}


header {
  color: #ccc;
  
  grid-column: 1 / 3;
  grid-row: 1;
  font-family: 'Work Sans', sans-serif;
  justify-self: left;
  align-self: center;
}

header .brand-title {
  font-weight: 400;
  display: block;
  font-size: 2rem;
  line-height: 1em;
  margin-bottom: 2rem;
}

header .symbol {
  color: #456;
  user-select: none;
  display: none;
  margin: 0 0.5rem;
  transition: 0.1s ease-in-out all;
  will-change: transform, color;
}

p {
  margin: 0 0 1rem 0;
}

content {
  padding: 0 2rem;
  grid-column: 1 / 3;
  grid-row: 2 / 3;
}

content h1,
content h2,
content h3,
content h4,
content h5 {
  margin: 0 0;
  color: var(--heading-color);
  font-weight: 200;
  font-size: 0.75rem;
  text-transform: uppercase;
  letter-spacing: 2px;
  line-height: 1.6em;
}

.introduction {
  padding-bottom: 1rem;
}

.professional-titles {
  color: var(--highlight-color);
}

.professional-titles:hover .symbol {
  
  transform: rotate(-90deg);
  transition: 0.2s ease-in-out all 0s;

}


nav {
  grid-column-start: content;
  z-index: 11;
}

nav ul {
  padding: 2rem 1rem;
  list-style: none;
  font-size: 0;
  margin: 0 0;
}

nav ul li {
  font-size: 1rem;
  width: auto;
  display: inline;
  min-width: 50%;
  float: left;
}

nav ul li a {
  text-align: center;
  display: block;
  padding: 0rem 0.5rem;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 1px;
  transition: 0.2s ease-out all;
  color: #666;
  border: 1px solid transparent;
  user-select: none;
  font-size: 0.75rem;
}


nav ul li a .vector {
  visibility: hidden;
  height: 1px;
  width: 1px;
  background-color: transparent;
  position: absolute;
  left: 50%;
  transform: translateY(0vh);
  height: 33vh;
  bottom: 2vh;
  z-index: -1;
  text-align: center;
}

nav ul li a:hover {
 border: 1px solid #000;
 color: #222;
}

nav ul li a:hover .vector {
  background-color: #666;
  height: 33vh;
  bottom: 2vh;
  transition: 0.7s ease-in height;
}


@media screen and (min-width: 55rem) {
  
  html {
    font-size: 18px;
  }
  
  nav {
    grid-column-start: auto;
    position: fixed;
    bottom: 1rem;
    left: 0px;
    right: 0px;
  }
  
  nav ul {
    text-align: center;
    display: flex;
    justify-content: center;
    padding: 0 0;
  }
  
  nav ul li {
    position: relative;
    float: none;
    width: auto;
  }
  
  nav ul li a {
    width: auto;
    margin: 0 1.5rem;
    position: relative;
  }
  
  nav ul li a .vector {
    visibility: visible;
    
  }
  
  .work {
    max-height: 30rem;
    overflow-y: scroll;
  }
  
}


nav ul li a:active {
  opacity: 0.5;
  transition: 0.15s ease-in all;
}


nav ul li a.active {
  color: #ddc;
  background-color: var(--container-background-color);
}

nav ul li .active .vector {
  background-color: var(--container-background-color);
}

ul.vantages {
  list-style: square;
  color: #444;
  margin: 0 0;
  padding: 0 0 0 1rem;
}

ul.vantages li p {
  color: var(--body-color);
  font-size: 1rem;
}

ul.list {
  padding: 0 0;
  margin: 0 0;
}

ul.list li {
  display: inline;
}

ul.list li:first-child {
  text-transform: capitalize;
}

ul.list li:after {
  content: ", ";
}

ul.list li:last-child:before {
  content: "& ";
}

ul.list li:last-child:after {
  content: ".";
}

.work {
  
  
}

.work::-webkit-scrollbar {
  width: 5px;
  height: 8px;
  background-color: #333;
}

.work::-webkit-scrollbar-thumb {
    background: #000; 
}


.work-history {

  list-style: none;
  padding: 0 0;
  margin: 0 0;
  font-size: 0.8rem;
  border-left: 1px solid #333;
  padding-left: 2rem;
  margin-left: 1rem;
  padding-bottom: 2rem;
}

.work-history .item {
  position: relative;
  margin-bottom: 1rem;
  background-color: transparent;
  padding: 1rem 1rem;
  margin-left: -1rem;
  transition: 0.2s ease-out background-color 0.2s;
}

.work-history .item:hover .positions .position {
  /*color: #666;*/
}

.work-history .item:before {
  content: "";
  display: block;
  width: 0.25rem;
  height: 0.25rem;
  left: -1.15rem;
  top: 1.25rem;
  position: absolute;
  background-color: #3a3a3a;
  will-change: background-color;
  
}

.work-history .item:hover:before {
  transition: 0.2s ease-out all;
  background-color: #888;
}

.work-history .positions {
  padding: 0 0;
  clear: both;
  list-style: none;
}

.work-history .positions .position {
  display: inline;
  text-transform: uppercase;
  letter-spacing: 1px;
  color: var(--link-color);
}

.work-history .positions .position:after {
  content: ", ";
}

.work-history .positions .position:last-child:after {
  content: none;
}


.work-history .business-name,
.work-history .location {
  display: inline;
}

.work-history .location {
  opacity: 0.65;
}

.work-history .location:before {
  content: "⸺";
  margin: 0 0.5em;
  opacity: 0.4;
}

.work-history .item .description {
  max-height: 0px;
  overflow: hidden;
  transition: 0.1s ease-out all;
  background-color: transparent;
  opacity: 0;
}

.work-history .item:hover .description {
  max-height: 16rem;
  height: auto;
  opacity: 1;
  transition: 0.2s ease-out all;
}


ul.interests {
  list-style: square;
}

ul.interests .interest {
  color: #666;
}

ul.interests .interest:after {
  color: var(--body-color);
}

ul.interests .interest:hover {
  color: var(--highlight-color);
}

ul.connecting-means {
  list-style: none;
  padding: 0 0 ;
  margin-top: 2rem;
}


ul.connecting-means li a {
  display: inline-block;
  width: 100%;
  padding: 1rem 1rem;
  margin: 0 auto 1px auto;
  background-color: #161616;
  font-size: 0.7rem;
  text-transform: uppercase;
  letter-spacing: 2px;
  transition: 0.5s ease-out all 0.5s;
}

ul.connecting-means li a:after {
  opacity: 0;
  content: "↗";
  display: inline-block;
  font-size: 1rem;
  color: #666;
  width: 1rem;
  height: 1rem;
  line-height: 1rem;
  margin-left: 0.25rem;
}

ul.connecting-means li a:hover {
  background-color: #111;
  text-decoration: none;
  transition: 0.2s ease-out all;
}

ul.connecting-means li a:hover:after {
  opacity: 1;
}

.animation--change-page {
  animation: 1s change-page ease-in-out;
}


@keyframes blink {
  from {
    opacity: 0;
  }
  
  to {
    opacity: 1;
  }
}

@keyframes change-page {
  0% {
    opacity: 1;
    transform: skewX(0);
    
  }
  
  
  50% {
    opacity: 0;
    transform: skewX(5);
    
  }
  
  100% {
    opacity: 1;
    transform: skewX(0);
  }
}

@media screen and (min-width: 55rem) {
  body {
    --body-background-color: #e4e4e5;
    --container-background-color: #161616;
    --container-size: 50rem;
  }
  
  .container {
    display: grid;
    justify-content: space-evenly;
    align-content: space-evenly;
    box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.2); 
    
    grid-template-columns: 20rem 20rem;
    grid-template-rows: 20rem 20rem 10rem;
  }
  
  header {
    padding-left: 2rem;
  }
  
  header .brand-title {
    font-size: 4rem;
    margin-bottom: 2rem;
  }
  
  header .description {
    margin-top: 2rem;
  }
  
  header .symbol {
    display: inline-block;
  }
  
  ul.connecting-means li {
    display: block;
    min-width: 50%;
    float: left;
  }
  
  .work {
    margin: -2rem -5rem -5rem 0rem;
    padding-right: 2rem;
    height: auto;
  }
}


@media screen and (min-width: 120rem) {
  
.work h1 {
  position: absolute;
  left: 10rem;
  top: 14vh;
}
  
.work {
  overflow-y: auto;  
}
  
.work-history {
    padding-top: 16.5vh;
    position: absolute;
    left: 2rem;
    top: 0;
    bottom: 0;
    width: 20vw;
    
    
  }
  
  .work-history .item .description {
    color: #444;
    margin-top: 1rem;
    transform: translateY(5rem);
    transition: 0.1s ease-in all 0.1s;
  }
  
  .work-history .item:hover .description {
    transform: translateY(0rem);
    ;
  }
  
  .work-history .item .business-name,
  .work-history .item .location {
    background-color: var(--container-background-color);
    padding: 0.25rem 0.5rem;
    color:  var(--body-color);
  }
  
  .work-history .item .location:before {
    content: "";
  }
  
  
  .work-history .item:hover:before {
    background-color: var(--link-color);
  }
  
  .work-history .item:hover {
    background-color: #fffcfa;
  }
  
}

